# task_space_adm_controller

./: .gitignore  CMakeLists.txt
Parameters/: BaseParam.h  config.yaml  config1A.yaml  config1B.yaml  config1C.yaml  config1D.yaml  config2.yaml  config3.yaml  config4.yaml
controller/: ControlLogger.cpp  ControlLogger.h  ControlState.h  Controller.cpp  Controller.h  MathPre.hpp
include/kortex/client_stubs/: BaseClientRpc.h
include/kortex/common/: version.h
include/kortex/messages/: Base.pb.h
src/: 01-task_space_controller.cpp  02-move_angular.cpp  2-move_angular.cpp  4-test_param.cpp  5-test_gravity_comp.cpp  6-output_gravity_comp.cpp  7-solve_ik.cpp  8-math.cpp
urdf/: GEN3_URDF_V12.urdf
utility/: utilities.cpp
